// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`magicWall should protect player behind wall 1`] = `
"*Игрок 1* использовал _Магическая стена_ на *Игрок 1* с эффектом 150.7
\\[ 📖4 ]
*Игрок 3* пытался атаковать *Игрок 1*, но у него не получилось
_Магическая стена_ *Игрок 1*: 📖87
*Игрок 3* пытался атаковать *Игрок 1*, но у него не получилось
_Магическая стена_ *Игрок 1*: 📖87"
`;

exports[`magicWall should not cast if behind wall 1`] = `4.8`;

exports[`magicWall should not cast if behind wall 2`] = `
"*Игрок 1* использовал _Магическая стена_ на *Игрок 3* с эффектом 150.7
\\[ 📖4 ]
*Игрок 3* пытался атаковать *Игрок 1*, но у него не получилось
_Магическая стена_ *Игрок 1*"
`;

exports[`magicWall should handle several wall casters 1`] = `
"*Игрок 1* использовал _Магическая стена_ на *Игрок 1* с эффектом 150.7
\\[ 📖4 ]
*Игрок 2* использовал _Магическая стена_ на *Игрок 1* с эффектом 150.7
\\[ 📖4 ]
*Игрок 3* пытался атаковать *Игрок 1*, но у него не получилось
_Магическая стена_ *Игрок 1*: 📖71,*Игрок 2*: 📖0"
`;
